--- a/app/design/frontend/base/default/template/affirm/telesales/checkout/error.phtml
+++ b/app/design/frontend/base/default/template/affirm/telesales/checkout/error.phtml
@@ -2,7 +2,7 @@
 
 <div>
   <p>
-    <?php echo $this->__('There was an error processing your order. Please contact us or try again later.')?>
+    <?php echo $this->__('We weren’t able to process your order either because of a processing error or an issue with your loan application. We’re sorry for the inconvenience. Please contact us or try again later.')?>
   </p>
   </br>
 </div>
